[package]
name = "lettuce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cargo-fuzz = "0.12.0"
crossbeam = "0.8.4"
futures = "0.3.30"
# glommio = "0.8.0"

hashbrown = "0.14.3"
memmap2 = "0.9.4"
parking_lot = "0.12.1"
proptest = "1.4.0"
